--- a/index.html
+++ b/index.html
@@ -1,70 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Caixa</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Caixa do Corinthians</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <style>
+
+      .card-img-top {
+        width: 100%;
+        height: 180px;
+        object-fit: contain;
+        object-position: center;
+      }
+      </style>
+    
 </head>
-    <body>
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Caixa</a>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Buscar</button>
-          </form>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Caixa do Corinthians</a>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+    </div>
+  </nav>
+
+
+
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <div class="d-flex overflow-auto py-3">
+          <div class="card me-3" style="min-width: 200px;">
+            <img src="img/bola.jpg" class="card-img-top" alt="Produto 1">
+            <div class="card-body">
+              <h5 class="card-title">Bola De Futebol Oficial Licenciada Corinthians (SCCP)</h5>
+              <p class="card-text">R$ 105,90</p><br>
+            </div>
+          </div>
+
+          <div class="card me-3" style="min-width: 200px;">
+            <img src="img/camisa.jpg" class="card-img-top" alt="Produto 2">
+            <div class="card-body">
+              <h5 class="card-title">Camisa Corinthians Oficial Licenciada, Preta com Listras Brancas, Tamanho M</h5>
+              <p class="card-text">R$ 78,90</p><br>
+            </div>
+          </div>
+
+          <div class="card me-3" style="min-width: 200px;">
+            <img src="img/boneco.jpg" class="card-img-top" alt="Produto 3">
+            <div class="card-body">
+              <h5 class="card-title">Boneco Mascote de Futebol Mosqueteiro Corinthians (Camisa 2)</h5>
+              <p class="card-text">R$ 47,90</p><br>
+            </div>
+          </div>
+
         </div>
-      </nav>
-
+      </div>
+      <div class="col">
         <form action="pedido.php" method="post">
-            <label for="nomeCliente">Insira o nome do Cliente:</label><br>
-            <input type="text" name="nomeCliente" id="nomeCliente" required><br>
-            <label for="nomeCliente">Insira o nome do Produto 1:</label><br>
-            <input type="text" name="produto1" id="produto1" required><br>
-            <label for="nomeCliente">Insira o valor do Produto 1:</label><br>
-            <input type="number" step="0.01" name="valor1" id="valor1" required><br>
-            <label for="nomeCliente">Insira o nome do Produto 2:</label><br>
-            <input type="text" name="produto2" id="produto2" required><br>
-            <label for="nomeCliente">Insira o valor do Produto 2:</label><br>
-            <input type="number" step="0.01" name="valor2" id="valor2" required><br>
-            <label for="nomeCliente">Insira o valor pago:</label><br>
-            <input type="number" step="0.01" name="valorPago" id="valorPago"><br>
-            <button type="submit" class="btn btn-dark">Gerar Nota Fiscal    </button>
-
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Insira o nome do Cliente</label>
-                  <input type="text" name="nomeCliente" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <button type="submit" class="btn btn-primary">Gerar Nota Fiscal</button>
- 
-
-
+          <br>
+          <label for="nomeCliente">Insira o nome do Cliente:</label><br>
+          <input type="text" name="nomeCliente" class="form-control" id="nomeCliente" required><br>
+          <label for="nomeCliente">Insira o nome do Produto 1:</label><br>
+          <input type="text" name="produto1" class="form-control" id="produto1" required><br>
+          <label for="nomeCliente">Insira o valor do Produto 1:</label><br>
+          <input type="number" step="0.01" name="valor1" class="form-control" id="valor1" required><br>
+          <label for="nomeCliente">Insira o nome do Produto 2:</label><br>
+          <input type="text" name="produto2" class="form-control" id="produto2" required><br>
+          <label for="nomeCliente">Insira o valor do Produto 2:</label><br>
+          <input type="number" step="0.01" name="valor2" class="form-control" id="valor2" required><br>
+          <label for="nomeCliente">Insira o valor pago:</label><br>
+          <input type="number" step="0.01" name="valorPago" class="form-control" id="valorPago"><br>
+          <button type="submit" class="btn btn-dark">Gerar Nota Fiscal </button>
         </form>
+      </div>
+    </div>
+  </div>
 
 
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
-    </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
+    integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
