--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Caixa do Corinthians</a>
+      <a class="navbar-brand" href="#navbar-brand">Caixa do Corinthians</a>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Buscar</button>
