--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <style>
+  <style>
+    .card-img-top {
+      width: 100%;
+      height: 180px;
+      object-fit: contain;
+      object-position: center;
+    }
+  </style>
 
-      .card-img-top {
-        width: 100%;
-        height: 180px;
-        object-fit: contain;
-        object-position: center;
-      }
-      </style>
-    
 </head>
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#navbar-brand">Caixa do Corinthians</a>
+      <a class="navbar-brand" href="#">Caixa do Corinthians</a>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Buscar</button>
@@ -64,7 +63,7 @@
         </div>
       </div>
       <div class="col">
-        <form action="pedido.php" method="post">
+        <form action="processar_pedido.php" method="post">
           <br>
           <label for="nomeCliente">Insira o nome do Cliente:</label><br>
           <input type="text" name="nomeCliente" class="form-control" id="nomeCliente" required><br>
